group file upload issue